--- a/web/src/index.css
+++ b/web/src/index.css
@@ -498,8 +498,10 @@ a.refresh {
     }
 }
 
-/* Hide red cross icon next to a failing PF4 progress bar for pre-fail jobs */
-.pf-c-progress.zuul-progress.pf-m-danger .pf-c-progress__status {
+/* Hide PF4 status indicator (red cross, green checkmark) next to a progress
+   bar */
+.pf-c-progress.zuul-item-progress .pf-c-progress__status,
+.pf-c-progress.zuul-progress .pf-c-progress__status {
     display: none;
 }
 
