FIXUP details view
Change-Id: I9a9a6c3bfd1b3b9adf3421fddc3b17aa53747bd3

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -183,6 +183,15 @@ a.refresh {
 
 /* Status page */
 
+.zuul-remaining-time {
+    text-align: right;
+}
+
+.zuul-unknown-remaining-time {
+    text-align: right;
+    padding-right: 4px;
+}
+
 /* Use the same hover effect like for selectable cards, but without
    actually selecting them */
 .zuul-pipeline-summary:hover,
